"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2006-11-09	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-50-test-03:
	  No source revision.
	  Parallelized create tests.  


2006-11-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-50-test-02:
	  No source revision.
	  Parallelized unroll tests.  


	* HACKT-00-01-04-main-00-80-50-test-01:
	  Branch for parallelizing regression test suite.  
	  No source revision.  
	  Compile-tests parallelized so far, and distchecked.  


2006-11-07	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-50:
	  No source revision.  Top-level configure patches Makefile to
		make it safer to "test && mkdir" during parallel installs.  


2006-11-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-49-merged-instance-02-31:
	  Branch merge.
	  Summary: major memory reduction in run-time and object binary size.  
		Added collection_interface as root abstract class per meta
		type of collection.  From this spawn the former 
		instance_collection and port_actuals_collection.
		port_actuals_collection is lightweight collection that uses 
		a reference to a formal collection for size/type information.  
	  Footprints are now heap-allocated making life much simpler/easier.  
	  Footprints are now responsible for allocating all collections
		in pools (called collection-pool-bundles).  
		Consequently, footprints are used to translate between
		pointers and indices.  
	  test/quarantine/mem-01.hac shows object size reduction of
		5x to 10x depending on the phase.  


2006-11-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-45-instance-02-31:
	  Perm'd !POOL_ALLOCATE_{INSTANCE,VALUE}_COLLECTIONS, because 
		they are no longer relevant, pool-management is done