@@ -1,5 +1,5 @@
 # "test/parser/array/Makefile.am"
-#	$Id: Makefile.am,v 1.17.4.3 2006/11/09 06:05:09 fang Exp $
+#	$Id: Makefile.am,v 1.17.4.4 2006/11/09 18:47:38 fang Exp $
 
 include $(top_srcdir)/test/Make.test-head
 
@@ -70,7 +70,7 @@ HACKT_CREATE_TEST_SUBJECTS = \
 	$(HACKT_CREATE_TEST_PASSES) \
 	$(HACKT_CREATE_TEST_FAILURES)
 
-HACKT_ALLOC_TEST_SUBJECTS = $(HACKT_CREATE_TEST_SUBJECTS)
+HACKT_ALLOC_TEST_PASSES = $(HACKT_CREATE_TEST_PASSES)
 
 HACKT_CFLAT_TEST_SUBJECTS = \
 	043 046
