@@ -1,5 +1,5 @@
 # "test/parser/datatype/Makefile.am"
-#	$Id: Makefile.am,v 1.13.26.2 2006/11/09 05:11:08 fang Exp $
+#	$Id: Makefile.am,v 1.13.26.3 2006/11/09 18:47:46 fang Exp $
 
 include $(top_srcdir)/test/Make.test-head
 
@@ -47,7 +47,7 @@ HACKT_CREATE_TEST_SUBJECTS = \
 	$(HACKT_CREATE_TEST_PASSES) \
 	$(HACKT_CREATE_TEST_FAILURES)
 
-HACKT_ALLOC_TEST_SUBJECTS = $(HACKT_CREATE_TEST_SUBJECTS)
+HACKT_ALLOC_TEST_PASSES = $(HACKT_CREATE_TEST_PASSES)
 
 # more output expectation files for when bison is used
 BISON_OUTPUTS += 015 017 018 019 020
