@@ -1,5 +1,5 @@
 # "test/parser/prs/Makefile.am"
-#	$Id: Makefile.am,v 1.13.4.2 2006/11/09 05:11:10 fang Exp $
+#	$Id: Makefile.am,v 1.13.4.3 2006/11/09 18:47:49 fang Exp $
 
 include $(top_srcdir)/test/Make.test-head
 
@@ -62,9 +62,9 @@ HACKT_CREATE_TEST_SUBJECTS = \
 	$(HACKT_CREATE_TEST_PASSES) \
 	$(HACKT_CREATE_TEST_FAILURES)
 
-HACKT_ALLOC_TEST_SUBJECTS = $(HACKT_CREATE_TEST_SUBJECTS)
+HACKT_ALLOC_TEST_PASSES = $(HACKT_CREATE_TEST_PASSES)
 
-HACKT_CFLAT_TEST_SUBJECTS = $(HACKT_ALLOC_TEST_SUBJECTS)
+HACKT_CFLAT_TEST_SUBJECTS = $(HACKT_ALLOC_TEST_PASSES)
 
 EMPTY_CFLAT_PRS_TESTS += \
 	000 001 007 008 009 \
