@@ -1,5 +1,5 @@
 # "test/quarantine/Makefile.am"
-#	$Id: Makefile.am,v 1.3 2006/10/24 02:52:54 fang Exp $
+#	$Id: Makefile.am,v 1.3.4.1 2006/11/09 18:48:00 fang Exp $
 
 include $(top_srcdir)/test/Make.test-head
 
@@ -20,9 +20,10 @@ HACKT_OBJ_TEST_SUBJECTS = \
 	$(HACKT_PARSE_TEST_WARNINGS) \
 	$(HACKT_PARSE_TEST_PASSES)
 
+# TODO: redefine in terms of PASSES and FAILURES
 HACKT_UNROLL_TEST_SUBJECTS = $(HACKT_PARSE_TEST_PASSES)
 HACKT_CREATE_TEST_SUBJECTS = $(HACKT_UNROLL_TEST_SUBJECTS)
-HACKT_ALLOC_TEST_SUBJECTS = $(HACKT_CREATE_TEST_SUBJECTS)
+HACKT_ALLOC_TEST_PASSES = $(HACKT_CREATE_TEST_SUBJECTS)
 
 HACKT_PRSIMRC_TEST_SUBJECTS =
 
