@@ -2,8 +2,8 @@
 
 2006-11-09	David Fang		<fangism@users.sourceforge.net>
 
-	* HACKT-00-01-04-main-00-80-50-test-03:
-	  Parallelized create-tests.
+	* HACKT-00-01-04-main-00-80-50-test-04:
+	  Parallelized alloc-tests.
 
 
 2006-11-08	David Fang		<fangism@users.sourceforge.net>
